--- a/challenge_promofarma/.env.example
+++ b/challenge_promofarma/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME=Challenge
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qWc/LEcUnWaHB0gnuJdapF7yHj8+G7mZOK2mK/eRVww=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://challenge.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=challenge
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
